OAuth,Redis and few fixs