@@ -11,6 +11,8 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.hateoas.EntityModel;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+//import org.springframework.security.core.annotation.AuthenticationPrincipal;
+//import org.springframework.security.oauth2.core.user.OAuth2User;
 import org.springframework.web.bind.annotation.*;
 import java.util.Collections;
 import java.util.Comparator;
@@ -40,12 +42,12 @@ public class TicketController {
 				.filter(e -> e.getName().equalsIgnoreCase(name)).collect(Collectors.toList())
 				: ticketService.getEvents();
 
-		
+
 		Comparator<Event>  comparator= sort.equalsIgnoreCase("name")
 				? Comparator.comparing(Event::getName):Comparator.comparing(Event::getId);
-		
+
 		allEvents.sort(comparator);
-		
+
 		int start = page * size;
 		int end = Math.min(start + size, allEvents.size());
 		if (start >= allEvents.size()) {
@@ -55,7 +57,42 @@ public class TicketController {
 
 		return ResponseEntity.ok(pageEvents);
 	}
-    
+
+//    @GetMapping
+//    @RateLimiter(name = "eventsList")
+//    public ResponseEntity<CollectionModel<EntityModel<Event>>> listEvents(
+//            @RequestParam(defaultValue = "0") int page,
+//            @RequestParam(defaultValue = "10") int size,
+//            @RequestParam(required = false) String name,
+//            @RequestParam(required = false, defaultValue = "id") String sort) {
+//        Pageable pageable = PageRequest.of(page, size,
+//                sort.equalsIgnoreCase("name") ? Sort.by("name") : Sort.by("id"));
+//        Page<Event> eventPage = name != null && !name.isBlank()
+//                ? ticketRepository.findByNameContainingIgnoreCase(name, pageable)
+//                : ticketRepository.findAll(pageable);
+//
+//        List<EntityModel<Event>> eventModels = eventPage.getContent().stream()
+//                .map(event -> EntityModel.of(event,
+//                        linkTo(methodOn(TicketController.class).getEvent(event.getId())).withSelfRel(),
+//                        linkTo(methodOn(TicketController.class).listEvents(page, size, name, sort)).withRel("events")))
+//                .collect(Collectors.toList());
+//
+//        CollectionModel<EntityModel<Event>> collectionModel = CollectionModel.of(eventModels);
+//        collectionModel.add(linkTo(methodOn(TicketController.class).listEvents(page, size, name, sort)).withSelfRel());
+//        if (eventPage.hasNext()) {
+//            collectionModel.add(linkTo(methodOn(TicketController.class)
+//                    .listEvents(page + 1, size, name, sort)).withRel("next"));
+//        }
+//        if (eventPage.hasPrevious()) {
+//            collectionModel.add(linkTo(methodOn(TicketController.class)
+//                    .listEvents(page - 1, size, name, sort)).withRel("prev"));
+//        }
+//
+//        return ResponseEntity.ok(collectionModel);
+//    }
+
+
+
     @PostMapping
     public Event addEvent(@RequestBody Event event) {
     	 ticketService.addEvent(event);
@@ -65,7 +102,11 @@ public class TicketController {
     @PostMapping("/{id}/book")
     @RateLimiter(name = "booking")
     public CompletableFuture<EntityModel<ResponseEntity<String>>> bookTicket(@PathVariable int id,
-                                                @Valid @RequestBody BookRequest request) {
+                                                @Valid @RequestBody BookRequest request
+                                               //@AuthenticationPrincipal OAuth2User principal
+                                                                             ) {
+
+//        String user = principal.getAttribute("email");
         return ticketService.bookTicket(request.getUser(), id,request.getQuantity()).
         		thenApply(result-> {
         			ResponseEntity<String> response = ResponseEntity.ok(result);
@@ -79,7 +120,7 @@ public class TicketController {
     public CompletableFuture<ResponseEntity<String>> batchBookTickets(@Valid @RequestBody List<BookRequest> requests) {
         List<CompletableFuture<String>> futures = requests.stream()
                 .map(req -> ticketService.bookTicket(req.getUser(), req.getEventId(), req.getQuantity()))
-                .collect(Collectors.toList());
+                .toList();
 
         return CompletableFuture.allOf(futures.toArray(new CompletableFuture[0]))
                 .thenApply(v -> {
